[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.131.0"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
chrono = "0.4.44"
deadpool-redis = "0.23.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
openidconnect = "4.0.1"
rand = "0.10.1"
redis = { version = "1.2.1", features = ["tokio-comp", "connection-manager", "tokio-rustls-comp", "tls-rustls-webpki-roots"] }
reqwest = "0.12.28"
rstest = "0.26.1"
rustls = { version = "0.23.40", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha256 = "1.6.0"
sqlx = { version = "0.8.6", features = ["macros", "mysql", "runtime-tokio-rustls", "json", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["yaml", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 1
